# Iyiris

./: .gitignore  README.md  package-lock.json  package.json  parlet-release.b64  parlet-release.jks  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: build-android.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/: ColorChip.svelte  ColorInfo.svelte  ColorInput.svelte  ColorblindSimulator.svelte  ContrastChecker.svelte  ExportPanel.svelte  FavoritesSidebar.svelte  PaletteDisplay.svelte  UIPreview.svelte
src/lib/stores/: palette.ts
src/lib/utils/: colorUtils.ts  colorblind.ts  contrast.ts  export.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
