[package]
name = "iyiris"
version = "0.1.0"
description = "iyiris — Color Palette Design Tool"
authors = ["Juan Esteban Herrera"]
edition = "2021"

[lib]
name = "iyiris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
